genTrainML/hls4mlCICADA-like_NN/newSNAIL_prj/vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
  **** SW Build 2902540 on Wed May 27 19:54:35 MDT 2020
  **** IP Build 2902112 on Wed May 27 22:43:36 MDT 2020
    ** Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.

source /afs/hep.wisc.edu/cms/sw/Xilinx/Vivado/2020.1/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/afs/hep.wisc.edu/cms/sw/Xilinx/Vivado/2020.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'incik' on host 'login02.hep.wisc.edu' (Linux_x86_64 version 5.4.245-1.el7.elrepo.x86_64) on Tue Jul 25 09:54:43 CDT 2023
INFO: [HLS 200-10] On os "CentOS Linux release 7.9.2009 (Core)"
INFO: [HLS 200-10] In directory '/afs/hep.wisc.edu/user/incik/CMSSW_13_1_0_pre2/src/genTrainML/hls4mlCICADA-like_NN/newSNAIL_prj'
Sourcing Tcl script 'build_prj.tcl'
INFO: [HLS 200-10] Creating and opening project '/afs/hep.wisc.edu/user/incik/CMSSW_13_1_0_pre2/src/genTrainML/hls4mlCICADA-like_NN/newSNAIL_prj/myproject_prj'.
INFO: [HLS 200-10] Adding design file 'firmware/myproject.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'myproject_test.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'firmware/weights' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_data' to the project
INFO: [HLS 200-10] Creating and opening solution '/afs/hep.wisc.edu/user/incik/CMSSW_13_1_0_pre2/src/genTrainML/hls4mlCICADA-like_NN/newSNAIL_prj/myproject_prj/solution1'.
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-1161] The maximum of name length is set into 80.
INFO: [HLS 200-10] Setting target device to 'xc7vx690t-ffg1927-2'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 6.25ns.
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 0.781ns.
***** C/RTL SYNTHESIS *****
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'firmware/myproject.cpp' ... 
WARNING: [HLS 200-40] In file included from firmware/myproject.cpp:1:
In file included from /cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/iostream:37:
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:744:5: error: builtin feature check macro requires a parenthesized identifier
#if _GLIBCXX_HAS_BUILTIN(__is_same)
    ^
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:728:35: note: expanded from macro '_GLIBCXX_HAS_BUILTIN'
#  define _GLIBCXX_HAS_BUILTIN(B) __has_builtin(B)
                                  ^
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:744:5: error: expected end of line in preprocessor expression
#if _GLIBCXX_HAS_BUILTIN(__is_same)
    ^
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:728:50: note: expanded from macro '_GLIBCXX_HAS_BUILTIN'
#  define _GLIBCXX_HAS_BUILTIN(B) __has_builtin(B)
                                                 ^
In file included from firmware/myproject.cpp:4:
In file included from firmware/parameters.h:7:
In file included from firmware/nnet_utils/nnet_code_gen.h:4:
In file included from firmware/nnet_utils/nnet_helpers.h:8:
In file included from /cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/map:60:
In file included from /cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/bits/stl_map.h:63:
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/tuple:75:24: error: token is not a valid binary operator in a preprocessor subexpression
#if __has_cpp_attribute(__no_unique_address__)
    ~~~~~~~~~~~~~~~~~~~^
3 errors generated.
C preprocessor failed.
    while executing
"source build_prj.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 [list source $arg] "

INFO: [Common 17-206] Exiting vivado_hls at Tue Jul 25 09:54:58 2023...
